RESOLVED FIXED267331
[iFC][Ruby] frameset with display:none crashes in ruby
https://bugs.webkit.org/show_bug.cgi?id=267331
Summary [iFC][Ruby] frameset with display:none crashes in ruby
Antti Koivisto
Reported 2024-01-10 04:24:33 PST
<frameset> generates a renderer even with display:none breaking some assumptions.
Attachments
Antti Koivisto
Comment 1 2024-01-10 04:25:33 PST
Antti Koivisto
Comment 2 2024-01-10 04:36:33 PST
EWS
Comment 3 2024-01-10 06:45:10 PST
Committed 272846@main (8395281e9b92): <https://commits.webkit.org/272846@main> Reviewed commits have been landed. Closing PR #22581 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.