[iFC][Ruby] frameset with display:none crashes in ruby https://bugs.webkit.org/show_bug.cgi?id=267331 rdar://120496400

Reviewed by Alan Baradlay.

<frameset> generates a renderer even with 'display:none' breaking some assumptions.

* LayoutTests/fast/ruby/ruby-frameset-display-none-crash-expected.txt: Added.
* LayoutTests/fast/ruby/ruby-frameset-display-none-crash.html: Added.
* Source/WebCore/html/HTMLFrameElement.cpp:
(WebCore::HTMLFrameElement::rendererIsNeeded):
* Source/WebCore/html/HTMLFrameSetElement.cpp:
(WebCore::HTMLFrameSetElement::rendererIsNeeded): Deleted.
* Source/WebCore/html/HTMLFrameSetElement.h:
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjust const):

Adjust frameset/frame always have 'display:block', even when it is orginally 'none'.
This matches other browsers.

Canonical link: https://commits.webkit.org/272846@main