Source/WebCore/html/HTMLFrameSetElement.cpp
@@ -146,12 +146,6 @@ void HTMLFrameSetElement::attributeChanged(const QualifiedName& name, const Atom
     }
 }
 
-bool HTMLFrameSetElement::rendererIsNeeded(const RenderStyle&)
-{
-    // For compatibility, frames render even when display: none is set.
-    return true;
-}
-
 RenderPtr<RenderElement> HTMLFrameSetElement::createElementRenderer(RenderStyle&& style, const RenderTreePosition&)
 {
     if (style.hasContent())
